adding Thai and Portuguese translation file placeholders (translations to come), updating strings in source to allow i18n or flag as ignore